Improved generalization error meassurement

--- a/notebooks/baselineModels.ipynb
+++ b/notebooks/baselineModels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -56,11 +56,15 @@
      "text": [
       "\n",
       "Baseline Model (Mean Predictor) Cross-Validation Results:\n",
-      "R² scores for each fold: [-0.0032902  -0.00793626 -0.00072193 -0.03247125 -0.11076868]\n",
-      "Mean R²: -0.0310 (±0.0414)\n",
-      "RMSE for each fold: [11125.28975422 14912.55235547 11240.15193215 17734.83514548\n",
-      "  6841.09045667]\n",
-      "Mean RMSE: 12370.7839 (±3705.1512)\n"
+      "\n",
+      "R² scores for each fold: [-0.0033 -0.001  -0.0008 -0.0035 -0.0001]\n",
+      "Mean R²: -0.0017 (±0.0014)\n",
+      "\n",
+      "RMSE for each fold: [14133.18 15068.01 11191.55  9548.71 13583.5 ]\n",
+      "Mean RMSE: 12704.9895 (±2032.1394)\n",
+      "\n",
+      "MAE for each fold: [7348.57 6851.1  6573.82 6568.15 6568.87]\n",
+      "Mean MAE: 6782.1019 (±303.4041)\n"
      ]
     }
    ],
@@ -68,28 +72,35 @@
     "# Implement a baseline model (mean predictor)\n",
     "from sklearn.dummy import DummyRegressor\n",
     "from sklearn.model_selection import KFold, cross_val_score\n",
+    "from sklearn.metrics import mean_absolute_error, make_scorer\n",
     "\n",
     "# Set up K-Fold Cross-Validation\n",
     "k_folds = 5\n",
-    "kf = KFold(n_splits=k_folds, shuffle=True, random_state=14)\n",
+    "cv_strategy = KFold(n_splits=k_folds, shuffle=True, random_state=17)\n",
     "\n",
     "# Initialize the baseline model (predicts the mean of y on the training set and uses it to predict y on the test set)\n",
     "baseline_model = DummyRegressor(strategy='mean')\n",
     "\n",
     "# Perform cross-validation on the baseline model\n",
-    "baseline_cv_scores_r2 = cross_val_score(baseline_model, X, y, cv=kf, scoring='r2')\n",
-    "baseline_cv_scores_neg_mse = cross_val_score(baseline_model, X, y, cv=kf, scoring='neg_mean_squared_error')\n",
+    "baseline_cv_scores_r2 = cross_val_score(baseline_model, X, y, cv=cv_strategy, scoring='r2')\n",
+    "baseline_cv_scores_neg_mse = cross_val_score(baseline_model, X, y, cv=cv_strategy, scoring='neg_mean_squared_error')\n",
     "\n",
     "# Convert negative MSE to positive MSE and then to RMSE\n",
     "baseline_cv_scores_mse = -baseline_cv_scores_neg_mse\n",
     "baseline_cv_scores_rmse = np.sqrt(baseline_cv_scores_mse)\n",
     "\n",
+    "# Define MAE scorer\n",
+    "mae_scorer = make_scorer(mean_absolute_error, greater_is_better=False)\n",
+    "baseline_cv_scores_mae = -cross_val_score(baseline_model, X, y, cv=cv_strategy, scoring=mae_scorer)\n",
+    "\n",
     "# Print baseline cross-validation results\n",
-    "print(\"\\nBaseline Model (Mean Predictor) Cross-Validation Results:\")\n",
-    "print(f\"R² scores for each fold: {baseline_cv_scores_r2}\")\n",
-    "print(f\"Mean R²: {baseline_cv_scores_r2.mean():.4f} (±{baseline_cv_scores_r2.std():.4f})\")\n",
-    "print(f\"RMSE for each fold: {baseline_cv_scores_rmse}\")\n",
-    "print(f\"Mean RMSE: {baseline_cv_scores_rmse.mean():.4f} (±{baseline_cv_scores_rmse.std():.4f})\")\n"
+    "print(\"\\nBaseline Model (Mean Predictor) Cross-Validation Results:\\n\")\n",
+    "print(f\"R² scores for each fold: {np.round(baseline_cv_scores_r2,4)}\")\n",
+    "print(f\"Mean R²: {baseline_cv_scores_r2.mean():.4f} (±{baseline_cv_scores_r2.std():.4f})\\n\")\n",
+    "print(f\"RMSE for each fold: {np.round(baseline_cv_scores_rmse,2)}\")\n",
+    "print(f\"Mean RMSE: {baseline_cv_scores_rmse.mean():.4f} (±{baseline_cv_scores_rmse.std():.4f})\\n\")\n",
+    "print(f\"MAE for each fold: {np.round(baseline_cv_scores_mae,2)}\")\n",
+    "print(f\"Mean MAE: {baseline_cv_scores_mae.mean():.4f} (±{baseline_cv_scores_mae.std():.4f})\")\n"
    ]
   },
   {
@@ -122,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -131,11 +142,15 @@
      "text": [
       "\n",
       "OLS Model Cross-Validation Results:\n",
-      "R² scores for each fold: [ 0.05018181  0.11863282  0.0973063   0.06897914 -0.27193074]\n",
-      "Mean R²: 0.0126 (±0.1442)\n",
-      "RMSE for each fold: [10824.76026325 13944.85123917 10675.43743215 16841.00009194\n",
-      "  7320.5759778 ]\n",
-      "Mean RMSE: 11921.3250 (±3231.7006)\n"
+      "\n",
+      "R² scores for each fold: [ 0.1311  0.0906  0.1352 -0.4952  0.0076]\n",
+      "Mean R²: -0.0261 (±0.2390)\n",
+      "\n",
+      "RMSE for each fold: [13152.69 14361.98 10403.11 11655.57 13531.56]\n",
+      "Mean RMSE: 12620.9816 (±1413.7850)\n",
+      "\n",
+      "MAE for each fold: [6234.76 5612.13 5576.47 6764.39 5876.08]\n",
+      "Mean MAE: 6012.7639 (±443.5692)\n"
      ]
     }
    ],
@@ -149,22 +164,28 @@
     "\n",
     "# Use the same K-Fold Cross-Validation\n",
     "k_folds = 5\n",
-    "kf = KFold(n_splits=k_folds, shuffle=True, random_state=14)\n",
+    "cv_strategy = KFold(n_splits=k_folds, shuffle=True, random_state=17)\n",
     "\n",
     "# Perform cross-validation on the OLS model\n",
-    "ols_cv_scores_r2 = cross_val_score(ols_model, X, y, cv=kf, scoring='r2')\n",
-    "ols_cv_scores_neg_mse = cross_val_score(ols_model, X, y, cv=kf, scoring='neg_mean_squared_error')\n",
+    "ols_cv_scores_r2 = cross_val_score(ols_model, X, y, cv=cv_strategy, scoring='r2')\n",
+    "ols_cv_scores_neg_mse = cross_val_score(ols_model, X, y, cv=cv_strategy, scoring='neg_mean_squared_error')\n",
     "\n",
     "# Convert negative MSE to positive MSE and then to RMSE\n",
     "ols_cv_scores_mse = -ols_cv_scores_neg_mse\n",
     "ols_cv_scores_rmse = np.sqrt(ols_cv_scores_mse)\n",
     "\n",
+    "# Define MAE scorer\n",
+    "mae_scorer = make_scorer(mean_absolute_error, greater_is_better=False)\n",
+    "ols_cv_scores_mae = -cross_val_score(ols_model, X, y, cv=cv_strategy, scoring=mae_scorer)\n",
+    "\n",
     "# Print OLS cross-validation results\n",
-    "print(\"\\nOLS Model Cross-Validation Results:\")\n",
-    "print(f\"R² scores for each fold: {ols_cv_scores_r2}\")\n",
-    "print(f\"Mean R²: {ols_cv_scores_r2.mean():.4f} (±{ols_cv_scores_r2.std():.4f})\")\n",
-    "print(f\"RMSE for each fold: {ols_cv_scores_rmse}\")\n",
-    "print(f\"Mean RMSE: {ols_cv_scores_rmse.mean():.4f} (±{ols_cv_scores_rmse.std():.4f})\")\n"
+    "print(\"\\nOLS Model Cross-Validation Results:\\n\")\n",
+    "print(f\"R² scores for each fold: {np.round(ols_cv_scores_r2,4)}\")\n",
+    "print(f\"Mean R²: {ols_cv_scores_r2.mean():.4f} (±{ols_cv_scores_r2.std():.4f})\\n\")\n",
+    "print(f\"RMSE for each fold: {np.round(ols_cv_scores_rmse,2)}\")\n",
+    "print(f\"Mean RMSE: {ols_cv_scores_rmse.mean():.4f} (±{ols_cv_scores_rmse.std():.4f})\\n\")\n",
+    "print(f\"MAE for each fold: {np.round(ols_cv_scores_mae,2)}\")\n",
+    "print(f\"Mean MAE: {ols_cv_scores_mae.mean():.4f} (±{ols_cv_scores_mae.std():.4f})\")"
    ]
   },
   {
@@ -187,18 +208,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best number of neighbors: 9\n",
-      "Best R² score:            0.0866\n",
-      "RMSE per fold:            [ 9691.57077991 13077.34177415 12046.57615531 16330.09420118\n",
-      "  6509.66310275]\n",
-      "Mean RMSE:                11531.05 ± 3295.02\n"
+      "R² per fold:       [ 0.05015095  0.1186294   0.09714017  0.06892772 -0.27228127]\n",
+      "Mean R²:            0.0125 ± 0.1443\n",
+      "RMSE per fold:      [10824.93609151 13944.87828144 10676.41969689 16841.46513121\n",
+      "  7321.58466251]\n",
+      "Mean RMSE:          11921.86 ± 3231.47\n"
      ]
     }
    ],
@@ -206,7 +227,9 @@
     "# 5-fold setup\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=14)\n",
     "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.feature_selection import VarianceThreshold\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "pipeline = Pipeline([\n",
     "    (\"var_thresh\", VarianceThreshold()),         # removes features with σ=0\n",
@@ -227,60 +250,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best number of neighbors: 9\n",
-      "Best R² score:            0.0866\n",
-      "RMSE per fold:            [ 9691.57077991 13077.34177415 12046.57615531 16330.09420118\n",
-      "  6509.66310275]\n",
-      "Mean RMSE:                11531.05 ± 3295.02\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.model_selection import KFold, GridSearchCV, cross_val_score\n",
-    "from sklearn.feature_selection import VarianceThreshold\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "import numpy as np\n",
-    "\n",
-    "# 5-fold CV setup\n",
-    "kf = KFold(n_splits=5, shuffle=True, random_state=14)\n",
-    "\n",
-    "# Define pipeline\n",
-    "pipeline = Pipeline([\n",
-    "    (\"var_thresh\", VarianceThreshold()),\n",
-    "    (\"scaler\", StandardScaler()),\n",
-    "    (\"knn\", KNeighborsRegressor())\n",
-    "])\n",
-    "\n",
-    "# Define the parameter grid for 'n_neighbors'\n",
-    "param_grid = {\n",
-    "    \"knn__n_neighbors\": [1, 3, 5, 7, 9, 11]\n",
-    "}\n",
-    "\n",
-    "# Setup GridSearchCV\n",
-    "grid_search = GridSearchCV(pipeline, param_grid, cv=kf, scoring=\"r2\", return_train_score=True)\n",
-    "grid_search.fit(X, y)\n",
-    "\n",
-    "# Best model and its parameters\n",
-    "print(\"Best number of neighbors:\", grid_search.best_params_[\"knn__n_neighbors\"])\n",
-    "print(\"Best R² score:           \", f\"{grid_search.best_score_:.4f}\")\n",
-    "\n",
-    "# Optional: Compute RMSE with best estimator\n",
-    "best_model = grid_search.best_estimator_\n",
-    "neg_mse_scores = cross_val_score(best_model, X, y, cv=kf, scoring=\"neg_mean_squared_error\")\n",
-    "rmse_scores = np.sqrt(-neg_mse_scores)\n",
-    "\n",
-    "print(\"RMSE per fold:           \", rmse_scores)\n",
-    "print(\"Mean RMSE:               \", f\"{rmse_scores.mean():.2f} ± {rmse_scores.std():.2f}\")\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
